--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,8 @@
       <div class="card">
         <img class="card-img-top" src="holder.js/100x180/" alt="">
         <div class="card-body">
-          <h4 class="card-title">Title</h4>
-          <p class="card-text">Text</p>
+          <h4 class="card-title">Dani</h4>
+          <p class="card-text">Gutierrez Adán</p>
         </div>
       </div>
     </div>
